white space error fixed

--- a/src/Component/Navbar/styles.module.css
+++ b/src/Component/Navbar/styles.module.css
@@ -2,6 +2,8 @@
   position: sticky;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
 }
 header {
